--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <!-- Game Setup Screen -->
         <div id="setupScreen" class="screen active">
             <div class="setup-container">
+                <h1 class="game-title">🎴 UNO Multiplayer</h1>
                 <div class="setup-card">
                     <div class="setup-options">
                         <div class="input-group">
