--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div id="setupScreen" class="screen active">
             <div class="setup-container">
                 <div class="setup-card">
-                    <h1 class="game-title">🎮 UNO</h1>
+                    <h1 class="game-title"><span style="position: relative; top: -0.1em;">🎮</span> UNO</h1>
                     <div class="setup-options">
                         <div class="input-group">
                             <label for="playerName">Your Name</label>
