--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -76,7 +77,7 @@
                         </div>
                         <div class="game-stats">
                             <span class="deck-count">🎴 Deck: <span id="deckCount">0</span></span>
-                            <span class="direction">↔️ Direction: <span id="direction">→</span></span>
+                            <span class="direction">↔️ Direction: <span id="direction">right</span></span>
                         </div>
                     </div>
                 </div>
