--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 </div>
                 
                 <div class="lobby-actions">
-                    <button id="startGameBtn" class="btn btn-primary" disabled>
+                    <button id="startGameBtn" class="btn btn-primary">
                         <span>🎮 Start Game</span>
                     </button>
                     <button id="leaveLobbyBtn" class="btn btn-secondary">
