--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#0f0f23">
     <meta name="description" content="Play UNO online with friends - Modern multiplayer card game">
     <title>UNO Multiplayer Game</title>
+    <link rel="icon" type="image/png" href="./UNO Logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
