--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <div id="setupScreen" class="screen active">
             <div class="setup-container">
                 <div class="setup-card">
-                    <h1 class="game-title"><span style="position: relative; top: -0.1em;">🎮</span> UNO</h1>
+                    <h1 class="game-title"><img src="./UNO Logo.png" alt="UNO Logo" style="height: 1em; width: auto; position: relative; top: 0.1em;"> UNO</h1>
                     <div class="setup-options">
                         <div class="input-group">
                             <label for="playerName">Your Name</label>
